8148955: libjimage.so compiled with wrong flags

Reviewed-by: alanb